update: main.ipynb

--- a/HS_algorithm/main.ipynb
+++ b/HS_algorithm/main.ipynb
@@ -5,8 +5,8 @@
    "id": "cd4e4260741a1d6b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-03T19:10:38.484448Z",
-     "start_time": "2025-02-03T19:10:38.410304Z"
+     "end_time": "2025-02-03T22:38:37.885786Z",
+     "start_time": "2025-02-03T22:38:37.809902Z"
     }
    },
    "source": [
@@ -29,8 +29,8 @@
    "id": "4212183e79a5c9d4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-03T19:10:38.500470Z",
-     "start_time": "2025-02-03T19:10:38.487891Z"
+     "end_time": "2025-02-03T22:38:37.901406Z",
+     "start_time": "2025-02-03T22:38:37.888786Z"
     }
    },
    "source": [
@@ -52,8 +52,8 @@
    "id": "7b8c71ae60feb9cd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-03T19:10:38.610851Z",
-     "start_time": "2025-02-03T19:10:38.596043Z"
+     "end_time": "2025-02-03T22:38:38.010349Z",
+     "start_time": "2025-02-03T22:38:37.995864Z"
     }
    },
    "source": [
@@ -69,8 +69,8 @@
      "output_type": "stream",
      "text": [
       "Generated 6 UIDs from the range [1, 60]\n",
-      "Min UID: 2\n",
-      "Max UID: 58\n"
+      "Min UID: 17\n",
+      "Max UID: 60\n"
      ]
     }
    ],
@@ -89,8 +89,8 @@
    "id": "f5f3017b18e966fa",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-03T19:10:38.812278Z",
-     "start_time": "2025-02-03T19:10:38.675114Z"
+     "end_time": "2025-02-03T22:38:41.283359Z",
+     "start_time": "2025-02-03T22:38:38.027460Z"
     }
    },
    "source": [
@@ -105,6 +105,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "100%|██████████| 6/6 [00:03<00:00,  1.93engine/s]\n",
       "Number of available engines: 6\n"
      ]
     }
@@ -122,8 +123,8 @@
    "id": "3d1581d022dfc4ae",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-03T19:10:38.889248Z",
-     "start_time": "2025-02-03T19:10:38.877180Z"
+     "end_time": "2025-02-03T22:38:41.314571Z",
+     "start_time": "2025-02-03T22:38:41.299577Z"
     }
    },
    "source": [
@@ -140,8 +141,8 @@
    "id": "567048f9125d5ca8",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-03T19:10:38.920259Z",
-     "start_time": "2025-02-03T19:10:38.906096Z"
+     "end_time": "2025-02-03T22:38:41.345566Z",
+     "start_time": "2025-02-03T22:38:41.331026Z"
     }
    },
    "source": [
@@ -155,12 +156,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, World! UID: 41, Total Nodes: 6\n",
-      "Hello, World! UID: 36, Total Nodes: 6\n",
-      "Hello, World! UID: 40, Total Nodes: 6\n",
-      "Hello, World! UID: 58, Total Nodes: 6\n",
-      "Hello, World! UID: 2, Total Nodes: 6\n",
-      "Hello, World! UID: 29, Total Nodes: 6\n"
+      "Hello, World! UID: 30, Total Nodes: 6\n",
+      "Hello, World! UID: 60, Total Nodes: 6\n",
+      "Hello, World! UID: 29, Total Nodes: 6\n",
+      "Hello, World! UID: 17, Total Nodes: 6\n",
+      "Hello, World! UID: 50, Total Nodes: 6\n",
+      "Hello, World! UID: 33, Total Nodes: 6\n"
      ]
     }
    ],
@@ -175,15 +176,102 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-03T19:10:38.951156Z",
-     "start_time": "2025-02-03T19:10:38.937178Z"
+     "end_time": "2025-02-03T22:38:41.406780Z",
+     "start_time": "2025-02-03T22:38:41.392907Z"
     }
    },
    "cell_type": "code",
-   "source": "# TODO",
+   "source": [
+    "def setup_communication(id, prev_id, next_id):\n",
+    "    import time\n",
+    "    from ipyparallel import Client\n",
+    "\n",
+    "    rc = Client()\n",
+    "    dw = rc[:]\n",
+    "\n",
+    "    def send_prev(data):\n",
+    "        dw.push({'incoming_data': data}, block=False, targets=[prev_id])\n",
+    "\n",
+    "    def send_next(data):\n",
+    "        # rc[next_id].push({'incoming_data': data}, block=False, targets=[next_id])\n",
+    "        dw.push({'incoming_data': data}, block=False, targets=[next_id])\n",
+    "\n",
+    "    def wait_for_data():\n",
+    "        return dw.pull('incoming_data', block=True, targets=[id])\n",
+    "\n",
+    "    return send_prev, send_next, wait_for_data"
+   ],
+   "id": "d37bd134cd9c2a3d",
+   "outputs": [],
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-03T22:38:41.437700Z",
+     "start_time": "2025-02-03T22:38:41.422539Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "@ipp.require(setup_communication)\n",
+    "def ring_communication(params):\n",
+    "    uid, id, prev_id, next_id = params\n",
+    "    send_prev, send_next, wait_for_data = setup_communication(id, prev_id, next_id)\n",
+    "    send_next(f\"Message from f{uid}\")\n",
+    "    a = wait_for_data()\n",
+    "    return a"
+   ],
+   "id": "88c0bf82974686b4",
+   "outputs": [],
+   "execution_count": 9
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2025-02-03T22:38:41.453914Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "ids = rc.ids\n",
+    "prev_ids = [(id - 1) % n for id in ids]\n",
+    "next_ids = [(id + 1) % n for id in ids]\n",
+    "params = zip(uids, ids, prev_ids, next_ids)\n",
+    "\n",
+    "results = rc[:].map_sync(ring_communication, params)\n",
+    "print(\"\\n\".join(results))"
+   ],
+   "id": "6a604aadc3f3a060",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# def lcr(uid):\n",
+    "#     u = uid\n",
+    "#     send = uid\n",
+    "#     status = 'unknown'\n",
+    "#\n",
+    "#     while status == 'unknown':\n",
+    "#         ..."
+   ],
+   "id": "9c9a1e94fa44a4c7",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "# results = rc[:].map_sync(lcr, uids)\n",
+    "# print(\"\\n\".join(results))"
+   ],
    "id": "5b06ba5cdced679c",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": null
   },
   {
    "metadata": {},
@@ -192,17 +280,12 @@
    "id": "fcc3a3bfd84e7a96"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-03T19:10:38.981709Z",
-     "start_time": "2025-02-03T19:10:38.967606Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": "# TODO",
    "id": "174c23c835bbfbdc",
    "outputs": [],
-   "execution_count": 8
+   "execution_count": null
   }
  ],
  "metadata": {
