update: main.ipynb, requirements.txt

--- a/HS_algorithm/main.ipynb
+++ b/HS_algorithm/main.ipynb
@@ -3,18 +3,14 @@
   {
    "cell_type": "code",
    "id": "cd4e4260741a1d6b",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-03T22:38:37.885786Z",
-     "start_time": "2025-02-03T22:38:37.809902Z"
-    }
-   },
+   "metadata": {},
    "source": [
-    "import random\n",
-    "import ipyparallel as ipp"
+    "import threading\n",
+    "import queue\n",
+    "import time"
    ],
    "outputs": [],
-   "execution_count": 1
+   "execution_count": null
   },
   {
    "cell_type": "markdown",
@@ -27,222 +23,80 @@
   {
    "cell_type": "code",
    "id": "4212183e79a5c9d4",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-03T22:38:37.901406Z",
-     "start_time": "2025-02-03T22:38:37.888786Z"
-    }
-   },
-   "source": [
-    "n = 6"
-   ],
+   "metadata": {},
+   "source": "n = 12",
    "outputs": [],
-   "execution_count": 2
+   "execution_count": null
   },
   {
-   "cell_type": "markdown",
-   "id": "177831fd-0742-46c0-a355-bc5afa574188",
    "metadata": {},
-   "source": [
-    "##### Generating node UIDs"
-   ]
+   "cell_type": "markdown",
+   "source": "##### Declaring Node class",
+   "id": "46388f79b2584fd8"
   },
   {
+   "metadata": {},
    "cell_type": "code",
-   "id": "7b8c71ae60feb9cd",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-03T22:38:38.010349Z",
-     "start_time": "2025-02-03T22:38:37.995864Z"
-    }
-   },
    "source": [
-    "uids = random.sample(range(1, (n * 10) + 1), n)\n",
+    "class Node:\n",
+    "    def __init__(self, node_id, total_nodes, queues):\n",
+    "        self.node_id = node_id\n",
+    "        self.total_nodes = total_nodes\n",
+    "        self.queues = queues\n",
+    "        self.in_queue = queues[node_id]\n",
+    "        self.prev_queue = queues[node_id - 1]\n",
+    "        self.next_queue = queues[(node_id + 1) % total_nodes]\n",
+    "        self.status = 'unknown'\n",
     "\n",
-    "print(f\"Generated {n} UIDs from the range [1, {n * 10}]\")\n",
-    "print(\"Min UID:\", min(uids))\n",
-    "print(\"Max UID:\", max(uids))"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Generated 6 UIDs from the range [1, 60]\n",
-      "Min UID: 17\n",
-      "Max UID: 60\n"
-     ]
-    }
-   ],
-   "execution_count": 3
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9fe8f6c6ffb4a455",
-   "metadata": {},
-   "source": [
-    "##### Connecting to the engines"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "id": "f5f3017b18e966fa",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-03T22:38:41.283359Z",
-     "start_time": "2025-02-03T22:38:38.027460Z"
-    }
-   },
-   "source": [
-    "cluster = ipp.Cluster.from_file()\n",
-    "rc = cluster.connect_client_sync()\n",
-    "rc.wait_for_engines(n)\n",
+    "    def send_prev(self, data):\n",
+    "        self.prev_queue.put(data)\n",
     "\n",
-    "print(f\"Number of available engines: {len(rc.ids)}\")"
+    "    def send_next(self, data):\n",
+    "        self.next_queue.put(data)\n",
+    "\n",
+    "    def accept(self):\n",
+    "        data = self.in_queue.get()\n",
+    "        self.in_queue.task_done()\n",
+    "        return data"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 6/6 [00:03<00:00,  1.93engine/s]\n",
-      "Number of available engines: 6\n"
-     ]
-    }
-   ],
-   "execution_count": 4
-  },
-  {
-   "cell_type": "markdown",
-   "id": "9d3790a7c1ba774d",
-   "metadata": {},
-   "source": "#### 'Hello, World!' message from nodes"
-  },
-  {
-   "cell_type": "code",
-   "id": "3d1581d022dfc4ae",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-03T22:38:41.314571Z",
-     "start_time": "2025-02-03T22:38:41.299577Z"
-    }
-   },
-   "source": [
-    "def hello_world(params):\n",
-    "    uid = params[0]\n",
-    "    n = params[1]\n",
-    "    return f\"Hello, World! UID: {uid}, Total Nodes: {n}\""
-   ],
+   "id": "5944da8db6790d15",
    "outputs": [],
-   "execution_count": 5
-  },
-  {
-   "cell_type": "code",
-   "id": "567048f9125d5ca8",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-03T22:38:41.345566Z",
-     "start_time": "2025-02-03T22:38:41.331026Z"
-    }
-   },
-   "source": [
-    "params = zip(uids, [n] * n)\n",
-    "\n",
-    "results = rc[:].map_sync(hello_world, params)\n",
-    "print(\"\\n\".join(results))"
-   ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello, World! UID: 30, Total Nodes: 6\n",
-      "Hello, World! UID: 60, Total Nodes: 6\n",
-      "Hello, World! UID: 29, Total Nodes: 6\n",
-      "Hello, World! UID: 17, Total Nodes: 6\n",
-      "Hello, World! UID: 50, Total Nodes: 6\n",
-      "Hello, World! UID: 33, Total Nodes: 6\n"
-     ]
-    }
-   ],
-   "execution_count": 6
+   "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "markdown",
    "source": "#### LCR algorithm",
-   "id": "24b1ad0be29f1d80"
+   "id": "f8a704c5776c2d7a"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-03T22:38:41.406780Z",
-     "start_time": "2025-02-03T22:38:41.392907Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
    "source": [
-    "def setup_communication(id, prev_id, next_id):\n",
-    "    import time\n",
-    "    from ipyparallel import Client\n",
+    "def lcr_node_worker(node):\n",
+    "    u = node.node_id\n",
+    "    send = node.node_id\n",
     "\n",
-    "    rc = Client()\n",
-    "    dw = rc[:]\n",
+    "    while True:\n",
+    "        node.send_next(send)\n",
     "\n",
-    "    def send_prev(data):\n",
-    "        dw.push({'incoming_data': data}, block=False, targets=[prev_id])\n",
+    "        v = node.accept()\n",
+    "        if v == \"TERM\":\n",
+    "            break\n",
     "\n",
-    "    def send_next(data):\n",
-    "        # rc[next_id].push({'incoming_data': data}, block=False, targets=[next_id])\n",
-    "        dw.push({'incoming_data': data}, block=False, targets=[next_id])\n",
-    "\n",
-    "    def wait_for_data():\n",
-    "        return dw.pull('incoming_data', block=True, targets=[id])\n",
-    "\n",
-    "    return send_prev, send_next, wait_for_data"
+    "        if v is None:\n",
+    "            send = v\n",
+    "            continue\n",
+    "        if v > u:\n",
+    "            send = v\n",
+    "            node.status = 'non-leader'\n",
+    "        elif v < u:\n",
+    "            send = None\n",
+    "        else:\n",
+    "            node.status = 'leader'\n",
+    "            return"
    ],
-   "id": "d37bd134cd9c2a3d",
-   "outputs": [],
-   "execution_count": 8
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-02-03T22:38:41.437700Z",
-     "start_time": "2025-02-03T22:38:41.422539Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "@ipp.require(setup_communication)\n",
-    "def ring_communication(params):\n",
-    "    uid, id, prev_id, next_id = params\n",
-    "    send_prev, send_next, wait_for_data = setup_communication(id, prev_id, next_id)\n",
-    "    send_next(f\"Message from f{uid}\")\n",
-    "    a = wait_for_data()\n",
-    "    return a"
-   ],
-   "id": "88c0bf82974686b4",
-   "outputs": [],
-   "execution_count": 9
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "start_time": "2025-02-03T22:38:41.453914Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "ids = rc.ids\n",
-    "prev_ids = [(id - 1) % n for id in ids]\n",
-    "next_ids = [(id + 1) % n for id in ids]\n",
-    "params = zip(uids, ids, prev_ids, next_ids)\n",
-    "\n",
-    "results = rc[:].map_sync(ring_communication, params)\n",
-    "print(\"\\n\".join(results))"
-   ],
-   "id": "6a604aadc3f3a060",
+   "id": "3881df357d056d4",
    "outputs": [],
    "execution_count": null
   },
@@ -250,26 +104,36 @@
    "metadata": {},
    "cell_type": "code",
    "source": [
-    "# def lcr(uid):\n",
-    "#     u = uid\n",
-    "#     send = uid\n",
-    "#     status = 'unknown'\n",
-    "#\n",
-    "#     while status == 'unknown':\n",
-    "#         ..."
+    "def lcr_run(total_nodes):\n",
+    "    queues = [queue.Queue() for _ in range(total_nodes)]\n",
+    "    nodes = [Node(i, total_nodes, queues) for i in range(total_nodes)]\n",
+    "\n",
+    "    threads = []\n",
+    "    for node in nodes:\n",
+    "        t = threading.Thread(target=lcr_node_worker, args=(node,))\n",
+    "        t.start()\n",
+    "        threads.append(t)\n",
+    "\n",
+    "    time.sleep(3)\n",
+    "    for q in queues:\n",
+    "        q.put(\"TERM\")\n",
+    "\n",
+    "    for t in threads:\n",
+    "        t.join()\n",
+    "\n",
+    "    for node in nodes:\n",
+    "        print(f\"{node.node_id}: {node.status}\")\n",
+    "    print(\"\\nLCR algorithm complete.\")"
    ],
-   "id": "9c9a1e94fa44a4c7",
+   "id": "b209c1ee050f59a3",
    "outputs": [],
    "execution_count": null
   },
   {
    "metadata": {},
    "cell_type": "code",
-   "source": [
-    "# results = rc[:].map_sync(lcr, uids)\n",
-    "# print(\"\\n\".join(results))"
-   ],
-   "id": "5b06ba5cdced679c",
+   "source": "lcr_run(n)",
+   "id": "ca80dfc97b06fa6e",
    "outputs": [],
    "execution_count": null
   },
@@ -282,8 +146,96 @@
   {
    "metadata": {},
    "cell_type": "code",
-   "source": "# TODO",
+   "source": [
+    "def hs_node_worker(node):\n",
+    "    u = node.node_id\n",
+    "    send_plus = ('from_prev', u, 'out', 1)\n",
+    "    send_minus = ('from_next', u, 'out', 1)\n",
+    "    phase = 0\n",
+    "\n",
+    "    while True:\n",
+    "        node.send_next(send_plus)\n",
+    "        node.send_next(send_minus)\n",
+    "\n",
+    "        v_prev, v_next = None, None\n",
+    "        while v_prev is None or v_next is None:\n",
+    "            v = node.accept()\n",
+    "            if v == \"TERM\":\n",
+    "                return\n",
+    "            if v is None:\n",
+    "                continue\n",
+    "            if v[0] == 'from_prev':\n",
+    "                v_prev = v[1:]\n",
+    "            if v[0] == 'from_next':\n",
+    "                v_next = v[1:]\n",
+    "\n",
+    "        if v_prev[1] == 'out':\n",
+    "            v, out, h = v_prev\n",
+    "            if v > u and h > 1:\n",
+    "                send_plus = ('from_prev', v, 'out', h - 1)\n",
+    "            elif v > u and h == 1:\n",
+    "                send_minus = ('from_next', v, 'in', 1)\n",
+    "            elif v == u:\n",
+    "                node.status = 'leader'\n",
+    "\n",
+    "        if v_next[1] == 'out':\n",
+    "            v, out, h = v_next\n",
+    "            if v > u and h > 1:\n",
+    "                send_minus = ('from_next', v, 'out', h - 1)\n",
+    "            elif v > u and h == 1:\n",
+    "                send_plus = ('from_prev', v, 'in', 1)\n",
+    "            elif v == u:\n",
+    "                node.status = 'leader'\n",
+    "\n",
+    "        if v_prev[1] == 'in' and v_prev[2] == 1 and v_prev[0] != u:\n",
+    "            v, in_, h = v_prev\n",
+    "            send_plus = ('from_prev', v, 'in', 1)\n",
+    "        if v_next[1] == 'in' and v_next[2] == 1 and v_next[0] != u:\n",
+    "            v, in_, h = v_next\n",
+    "            send_minus = ('from_next', v, 'in', 1)\n",
+    "        if (v_prev[0] == u and v_prev[1] == 'in' and v_prev[2] == 1) and (v_next[0] == u and v_next[1] == 'in' and v_next[2] == 1):\n",
+    "            phase += 1\n",
+    "            send_plus = ('from_prev', u, 'out', 2 ** phase)\n",
+    "            send_minus = ('from_next', u, 'out', 2 ** phase)\n"
+   ],
    "id": "174c23c835bbfbdc",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": [
+    "def hs_run(total_nodes):\n",
+    "    queues = [queue.Queue() for _ in range(total_nodes)]\n",
+    "    nodes = [Node(i, total_nodes, queues) for i in range(total_nodes)]\n",
+    "\n",
+    "    threads = []\n",
+    "    for node in nodes:\n",
+    "        t = threading.Thread(target=hs_node_worker, args=(node,))\n",
+    "        t.start()\n",
+    "        threads.append(t)\n",
+    "\n",
+    "    time.sleep(3)\n",
+    "    for q in queues:\n",
+    "        q.put(\"TERM\")\n",
+    "\n",
+    "    for t in threads:\n",
+    "        t.join()\n",
+    "\n",
+    "    for node in nodes:\n",
+    "        print(f\"{node.node_id}: {node.status}\")\n",
+    "    print(\"\\nHS algorithm complete.\")"
+   ],
+   "id": "f49f4e620398cc1f",
+   "outputs": [],
+   "execution_count": null
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "source": "hs_run(n)",
+   "id": "7d7338a805d84cf5",
    "outputs": [],
    "execution_count": null
   }
