update: main.ipynb

--- a/HS_algorithm/main.ipynb
+++ b/HS_algorithm/main.ipynb
@@ -3,14 +3,19 @@
   {
    "cell_type": "code",
    "id": "cd4e4260741a1d6b",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-04T08:58:22.986195Z",
+     "start_time": "2025-02-04T08:58:22.980279Z"
+    }
+   },
    "source": [
     "import threading\n",
     "import queue\n",
     "import time"
    ],
    "outputs": [],
-   "execution_count": null
+   "execution_count": 1
   },
   {
    "cell_type": "markdown",
@@ -23,10 +28,15 @@
   {
    "cell_type": "code",
    "id": "4212183e79a5c9d4",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-04T08:58:23.001319Z",
+     "start_time": "2025-02-04T08:58:22.989196Z"
+    }
+   },
    "source": "n = 12",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 2
   },
   {
    "metadata": {},
@@ -35,7 +45,12 @@
    "id": "46388f79b2584fd8"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-04T08:58:23.125152Z",
+     "start_time": "2025-02-04T08:58:23.110427Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "class Node:\n",
@@ -61,7 +76,7 @@
    ],
    "id": "5944da8db6790d15",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 3
   },
   {
    "metadata": {},
@@ -70,7 +85,12 @@
    "id": "f8a704c5776c2d7a"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-04T08:58:23.156288Z",
+     "start_time": "2025-02-04T08:58:23.141342Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "def lcr_node_worker(node):\n",
@@ -98,10 +118,15 @@
    ],
    "id": "3881df357d056d4",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 4
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-04T08:58:23.187188Z",
+     "start_time": "2025-02-04T08:58:23.172555Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "def lcr_run(total_nodes):\n",
@@ -127,15 +152,41 @@
    ],
    "id": "b209c1ee050f59a3",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 5
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-04T08:58:26.227231Z",
+     "start_time": "2025-02-04T08:58:23.203794Z"
+    }
+   },
    "cell_type": "code",
    "source": "lcr_run(n)",
    "id": "ca80dfc97b06fa6e",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0: non-leader\n",
+      "1: non-leader\n",
+      "2: non-leader\n",
+      "3: non-leader\n",
+      "4: non-leader\n",
+      "5: non-leader\n",
+      "6: non-leader\n",
+      "7: non-leader\n",
+      "8: non-leader\n",
+      "9: non-leader\n",
+      "10: non-leader\n",
+      "11: leader\n",
+      "\n",
+      "LCR algorithm complete.\n"
+     ]
+    }
+   ],
+   "execution_count": 6
   },
   {
    "metadata": {},
@@ -144,7 +195,12 @@
    "id": "fcc3a3bfd84e7a96"
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-04T08:58:26.258202Z",
+     "start_time": "2025-02-04T08:58:26.243741Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "def hs_node_worker(node):\n",
@@ -200,10 +256,15 @@
    ],
    "id": "174c23c835bbfbdc",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 7
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-04T08:58:26.289437Z",
+     "start_time": "2025-02-04T08:58:26.274921Z"
+    }
+   },
    "cell_type": "code",
    "source": [
     "def hs_run(total_nodes):\n",
@@ -229,15 +290,41 @@
    ],
    "id": "f49f4e620398cc1f",
    "outputs": [],
-   "execution_count": null
+   "execution_count": 8
   },
   {
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-02-04T08:58:29.336232Z",
+     "start_time": "2025-02-04T08:58:26.305828Z"
+    }
+   },
    "cell_type": "code",
    "source": "hs_run(n)",
    "id": "7d7338a805d84cf5",
-   "outputs": [],
-   "execution_count": null
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0: unknown\n",
+      "1: unknown\n",
+      "2: unknown\n",
+      "3: unknown\n",
+      "4: unknown\n",
+      "5: unknown\n",
+      "6: unknown\n",
+      "7: unknown\n",
+      "8: unknown\n",
+      "9: unknown\n",
+      "10: unknown\n",
+      "11: leader\n",
+      "\n",
+      "HS algorithm complete.\n"
+     ]
+    }
+   ],
+   "execution_count": 9
   }
  ],
  "metadata": {
