update: main.ipynb

--- a/HS_algorithm/main.ipynb
+++ b/HS_algorithm/main.ipynb
@@ -5,8 +5,8 @@
    "id": "cd4e4260741a1d6b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-04T08:58:22.986195Z",
-     "start_time": "2025-02-04T08:58:22.980279Z"
+     "end_time": "2025-02-04T11:09:09.003095Z",
+     "start_time": "2025-02-04T11:09:08.991884Z"
     }
    },
    "source": [
@@ -30,8 +30,8 @@
    "id": "4212183e79a5c9d4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-04T08:58:23.001319Z",
-     "start_time": "2025-02-04T08:58:22.989196Z"
+     "end_time": "2025-02-04T11:09:09.018810Z",
+     "start_time": "2025-02-04T11:09:09.008827Z"
     }
    },
    "source": "n = 12",
@@ -47,31 +47,29 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-04T08:58:23.125152Z",
-     "start_time": "2025-02-04T08:58:23.110427Z"
+     "end_time": "2025-02-04T11:09:09.143500Z",
+     "start_time": "2025-02-04T11:09:09.128645Z"
     }
    },
    "cell_type": "code",
    "source": [
     "class Node:\n",
-    "    def __init__(self, node_id, total_nodes, queues):\n",
-    "        self.node_id = node_id\n",
-    "        self.total_nodes = total_nodes\n",
-    "        self.queues = queues\n",
-    "        self.in_queue = queues[node_id]\n",
-    "        self.prev_queue = queues[node_id - 1]\n",
-    "        self.next_queue = queues[(node_id + 1) % total_nodes]\n",
+    "    def __init__(self, uid, in_queue, prev_queue, next_queue):\n",
+    "        self.uid = uid\n",
     "        self.status = 'unknown'\n",
+    "        self._in_queue = in_queue\n",
+    "        self._prev_queue = prev_queue\n",
+    "        self._next_queue = next_queue\n",
     "\n",
     "    def send_prev(self, data):\n",
-    "        self.prev_queue.put(data)\n",
+    "        self._prev_queue.put(data)\n",
     "\n",
     "    def send_next(self, data):\n",
-    "        self.next_queue.put(data)\n",
+    "        self._next_queue.put(data)\n",
     "\n",
     "    def accept(self):\n",
-    "        data = self.in_queue.get()\n",
-    "        self.in_queue.task_done()\n",
+    "        data = self._in_queue.get()\n",
+    "        self._in_queue.task_done()\n",
     "        return data"
    ],
    "id": "5944da8db6790d15",
@@ -87,15 +85,15 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-04T08:58:23.156288Z",
-     "start_time": "2025-02-04T08:58:23.141342Z"
+     "end_time": "2025-02-04T11:09:09.173336Z",
+     "start_time": "2025-02-04T11:09:09.160750Z"
     }
    },
    "cell_type": "code",
    "source": [
     "def lcr_node_worker(node):\n",
-    "    u = node.node_id\n",
-    "    send = node.node_id\n",
+    "    u = node.uid\n",
+    "    send = node.uid\n",
     "\n",
     "    while True:\n",
     "        node.send_next(send)\n",
@@ -123,15 +121,17 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-04T08:58:23.187188Z",
-     "start_time": "2025-02-04T08:58:23.172555Z"
+     "end_time": "2025-02-04T11:09:09.203578Z",
+     "start_time": "2025-02-04T11:09:09.189452Z"
     }
    },
    "cell_type": "code",
    "source": [
     "def lcr_run(total_nodes):\n",
     "    queues = [queue.Queue() for _ in range(total_nodes)]\n",
-    "    nodes = [Node(i, total_nodes, queues) for i in range(total_nodes)]\n",
+    "    prev_queues = [queues[(i - 1) % total_nodes] for i in range(total_nodes)]\n",
+    "    next_queues = [queues[(i + 1) % total_nodes] for i in range(total_nodes)]\n",
+    "    nodes = [Node(i, queues[i], prev_queues[i], next_queues[i]) for i in range(total_nodes)]\n",
     "\n",
     "    threads = []\n",
     "    for node in nodes:\n",
@@ -147,7 +147,7 @@
     "        t.join()\n",
     "\n",
     "    for node in nodes:\n",
-    "        print(f\"{node.node_id}: {node.status}\")\n",
+    "        print(f\"{node.uid}: {node.status}\")\n",
     "    print(\"\\nLCR algorithm complete.\")"
    ],
    "id": "b209c1ee050f59a3",
@@ -157,8 +157,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-04T08:58:26.227231Z",
-     "start_time": "2025-02-04T08:58:23.203794Z"
+     "end_time": "2025-02-04T11:09:12.252701Z",
+     "start_time": "2025-02-04T11:09:09.220033Z"
     }
    },
    "cell_type": "code",
@@ -197,14 +197,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-04T08:58:26.258202Z",
-     "start_time": "2025-02-04T08:58:26.243741Z"
+     "end_time": "2025-02-04T11:09:12.299615Z",
+     "start_time": "2025-02-04T11:09:12.284378Z"
     }
    },
    "cell_type": "code",
    "source": [
     "def hs_node_worker(node):\n",
-    "    u = node.node_id\n",
+    "    u = node.uid\n",
     "    send_plus = ('from_prev', u, 'out', 1)\n",
     "    send_minus = ('from_next', u, 'out', 1)\n",
     "    phase = 0\n",
@@ -249,10 +249,11 @@
     "        if v_next[1] == 'in' and v_next[2] == 1 and v_next[0] != u:\n",
     "            v, in_, h = v_next\n",
     "            send_minus = ('from_next', v, 'in', 1)\n",
-    "        if (v_prev[0] == u and v_prev[1] == 'in' and v_prev[2] == 1) and (v_next[0] == u and v_next[1] == 'in' and v_next[2] == 1):\n",
+    "        if ((v_prev[0] == u and v_prev[1] == 'in' and v_prev[2] == 1)\n",
+    "                and (v_next[0] == u and v_next[1] == 'in' and v_next[2] == 1)):\n",
     "            phase += 1\n",
     "            send_plus = ('from_prev', u, 'out', 2 ** phase)\n",
-    "            send_minus = ('from_next', u, 'out', 2 ** phase)\n"
+    "            send_minus = ('from_next', u, 'out', 2 ** phase)"
    ],
    "id": "174c23c835bbfbdc",
    "outputs": [],
@@ -261,15 +262,17 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-04T08:58:26.289437Z",
-     "start_time": "2025-02-04T08:58:26.274921Z"
+     "end_time": "2025-02-04T11:09:12.314993Z",
+     "start_time": "2025-02-04T11:09:12.302674Z"
     }
    },
    "cell_type": "code",
    "source": [
     "def hs_run(total_nodes):\n",
     "    queues = [queue.Queue() for _ in range(total_nodes)]\n",
-    "    nodes = [Node(i, total_nodes, queues) for i in range(total_nodes)]\n",
+    "    prev_queues = [queues[(i - 1) % total_nodes] for i in range(total_nodes)]\n",
+    "    next_queues = [queues[(i + 1) % total_nodes] for i in range(total_nodes)]\n",
+    "    nodes = [Node(i, queues[i], prev_queues[i], next_queues[i]) for i in range(total_nodes)]\n",
     "\n",
     "    threads = []\n",
     "    for node in nodes:\n",
@@ -285,7 +288,7 @@
     "        t.join()\n",
     "\n",
     "    for node in nodes:\n",
-    "        print(f\"{node.node_id}: {node.status}\")\n",
+    "        print(f\"{node.uid}: {node.status}\")\n",
     "    print(\"\\nHS algorithm complete.\")"
    ],
    "id": "f49f4e620398cc1f",
@@ -295,8 +298,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-02-04T08:58:29.336232Z",
-     "start_time": "2025-02-04T08:58:26.305828Z"
+     "end_time": "2025-02-04T11:09:15.353461Z",
+     "start_time": "2025-02-04T11:09:12.331521Z"
     }
    },
    "cell_type": "code",
